Configured LmdbJava and Native lib